Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Drivojoy.GitHub.io by drivojoy</title>
+    <title>drivojoy.github.io by drivojoy</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Drivojoy.GitHub.io</h1>
+        <h1>drivojoy.github.io</h1>
         <p>engineering blog of drivojoy.com</p>
 
 
@@ -26,7 +26,7 @@
         <h1>
 <a id="engineeringdrivojoycom" class="anchor" href="#engineeringdrivojoycom" aria-hidden="true"><span class="octicon octicon-link"></span></a>engineering.drivojoy.com</h1>
 
-<p><em>Welcome to engineering blog of drivojoy.com</em>  Please watch out this space for more details</p>
+<p><em>Welcome to engineering blog of <a href="http://drivojoy.com/">drivojoy.com</a></em>  Please watch out this space for more details</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
