added tracking script,fixed title
added tracking script and fixed title

--- a/index.html
+++ b/index.html
@@ -35,3 +35,13 @@ title: Home
     <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
+<script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-67304039-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
